[gd_scene load_steps=18 format=3 uid="uid://c34syoq1xxtx3"]

[ext_resource type="Texture2D" uid="uid://w5cw17px38cn" path="res://maps/1.png" id="1_gfn6h"]
[ext_resource type="Script" path="res://scripts/choose_map.gd" id="1_iy4ug"]
[ext_resource type="Texture2D" uid="uid://nxkebery7tia" path="res://maps/2.png" id="2_orvy5"]
[ext_resource type="Texture2D" uid="uid://c4n7hl72kc8nn" path="res://maps/3.png" id="3_vb461"]
[ext_resource type="Texture2D" uid="uid://b1te1ybm87svg" path="res://maps/4.png" id="4_8kpfw"]
[ext_resource type="Texture2D" uid="uid://cmywf1euxybij" path="res://art/sprites/arrow.png" id="4_gknjx"]
[ext_resource type="Texture2D" uid="uid://buq36mhn42psb" path="res://art/sprites/car1.png" id="5_l4t5f"]
[ext_resource type="Texture2D" uid="uid://dys6crekjp1wb" path="res://art/sprites/car2.png" id="6_u66so"]
[ext_resource type="Texture2D" uid="uid://y4kfwrspim4" path="res://maps/6.png" id="6_uey1g"]
[ext_resource type="FontFile" uid="uid://cwo2tc2qtq41u" path="res://karmatic-arcade/ka1.ttf" id="6_x0sx8"]
[ext_resource type="Texture2D" uid="uid://blo3km28xqob4" path="res://maps/5.png" id="7_1s5qn"]
[ext_resource type="Texture2D" uid="uid://bqk0fvrej6lgc" path="res://art/sprites/car3.png" id="7_fsfed"]
[ext_resource type="Texture2D" uid="uid://cjdsjoa0pyosm" path="res://art/sprites/car4.png" id="8_f54gi"]
[ext_resource type="Texture2D" uid="uid://nelk7gqvto52" path="res://art/sprites/car5.png" id="9_otu8t"]
[ext_resource type="Texture2D" uid="uid://bakyg4n67wdrb" path="res://art/sprites/car6.png" id="10_fdkcs"]
[ext_resource type="Texture2D" uid="uid://b3jicq32v3g1v" path="res://maps/7.png" id="10_hnm84"]
[ext_resource type="Texture2D" uid="uid://bqr6adxx54bb5" path="res://art/sprites/car7.png" id="11_tldix"]

[node name="choose_map" type="Node2D"]
script = ExtResource("1_iy4ug")

[node name="BackGround" type="ColorRect" parent="."]
offset_right = 1200.0
offset_bottom = 720.0
color = Color(0.980392, 0.580392, 0.584314, 1)

[node name="Next" type="TextureRect" parent="."]
offset_left = 960.0
offset_top = 152.0
offset_right = 1032.0
offset_bottom = 224.0
scale = Vector2(2.93, 2.93)
texture = ExtResource("4_gknjx")

[node name="Previous" type="TextureRect" parent="."]
offset_left = 240.0
offset_top = 360.0
offset_right = 312.0
offset_bottom = 432.0
rotation = 3.14159
scale = Vector2(2.93, 2.93)
texture = ExtResource("4_gknjx")

[node name="Maps" type="CanvasLayer" parent="."]

[node name="Map0" type="Sprite2D" parent="Maps"]
position = Vector2(600, 248)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_gfn6h")

[node name="Map1" type="Sprite2D" parent="Maps"]
visible = false
position = Vector2(600, 248)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_orvy5")

[node name="Map2" type="Sprite2D" parent="Maps"]
visible = false
position = Vector2(600, 248)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_vb461")

[node name="Map3" type="Sprite2D" parent="Maps"]
visible = false
position = Vector2(600, 248)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_8kpfw")

[node name="Map4" type="Sprite2D" parent="Maps"]
visible = false
position = Vector2(600, 248)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_1s5qn")

[node name="Map5" type="Sprite2D" parent="Maps"]
visible = false
position = Vector2(600, 248)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_uey1g")

[node name="Map6" type="Sprite2D" parent="Maps"]
visible = false
position = Vector2(600, 248)
scale = Vector2(0.355, 0.418658)
texture = ExtResource("10_hnm84")

[node name="Time_Attack" type="CanvasLayer" parent="."]
visible = false

[node name="Sprite2D1" type="Sprite2D" parent="Time_Attack"]
position = Vector2(104, 480)
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("5_l4t5f")

[node name="mins" type="Label" parent="Time_Attack/Sprite2D1"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6667
offset_top = -16.0
offset_right = 18.3333
offset_bottom = 3.00004
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "00"
metadata/_edit_use_anchors_ = true

[node name="sec" type="Label" parent="Time_Attack/Sprite2D1"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6669
offset_top = -53.3332
offset_right = 95.3331
offset_bottom = 14.6668
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "00"

[node name="msec" type="Label" parent="Time_Attack/Sprite2D1"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6671
offset_top = -90.6666
offset_right = 148.333
offset_bottom = -22.6666
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "000"

[node name="Sprite2D2" type="Sprite2D" parent="Time_Attack"]
position = Vector2(104, 544)
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("6_u66so")

[node name="mins" type="Label" parent="Time_Attack/Sprite2D2"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6667
offset_top = -16.0
offset_right = 18.3333
offset_bottom = 3.00004
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "00"

[node name="sec" type="Label" parent="Time_Attack/Sprite2D2"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6669
offset_top = -53.3332
offset_right = 95.3331
offset_bottom = 14.6668
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "00"

[node name="msec" type="Label" parent="Time_Attack/Sprite2D2"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6671
offset_top = -90.6666
offset_right = 148.333
offset_bottom = -22.6666
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "000"

[node name="Sprite2D3" type="Sprite2D" parent="Time_Attack"]
position = Vector2(104, 608)
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("7_fsfed")

[node name="mins" type="Label" parent="Time_Attack/Sprite2D3"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6667
offset_top = -16.0
offset_right = 18.3333
offset_bottom = 3.00004
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "00"

[node name="sec" type="Label" parent="Time_Attack/Sprite2D3"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6669
offset_top = -53.3332
offset_right = 95.3331
offset_bottom = 14.6668
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "00"

[node name="msec" type="Label" parent="Time_Attack/Sprite2D3"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6671
offset_top = -90.6666
offset_right = 148.333
offset_bottom = -22.6666
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "000"

[node name="Sprite2D4" type="Sprite2D" parent="Time_Attack"]
position = Vector2(104, 672)
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("8_f54gi")

[node name="mins" type="Label" parent="Time_Attack/Sprite2D4"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6667
offset_top = -16.0
offset_right = 18.3333
offset_bottom = 3.00004
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "00"

[node name="sec" type="Label" parent="Time_Attack/Sprite2D4"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6669
offset_top = -53.3332
offset_right = 95.3331
offset_bottom = 14.6668
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "00"

[node name="msec" type="Label" parent="Time_Attack/Sprite2D4"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6671
offset_top = -90.6666
offset_right = 148.333
offset_bottom = -22.6666
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "000"

[node name="Sprite2D5" type="Sprite2D" parent="Time_Attack"]
position = Vector2(592.001, 480)
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("9_otu8t")

[node name="mins" type="Label" parent="Time_Attack/Sprite2D5"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6667
offset_top = -16.0
offset_right = 18.3333
offset_bottom = 3.00004
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "00"

[node name="sec" type="Label" parent="Time_Attack/Sprite2D5"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6669
offset_top = -53.3332
offset_right = 95.3331
offset_bottom = 14.6668
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "00"

[node name="msec" type="Label" parent="Time_Attack/Sprite2D5"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6671
offset_top = -90.6666
offset_right = 148.333
offset_bottom = -22.6666
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "000"

[node name="Sprite2D6" type="Sprite2D" parent="Time_Attack"]
position = Vector2(592, 544)
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("10_fdkcs")

[node name="mins" type="Label" parent="Time_Attack/Sprite2D6"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6667
offset_top = -16.0
offset_right = 18.3333
offset_bottom = 3.00004
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "00"

[node name="sec" type="Label" parent="Time_Attack/Sprite2D6"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6669
offset_top = -53.3332
offset_right = 95.3331
offset_bottom = 14.6668
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "00"

[node name="msec" type="Label" parent="Time_Attack/Sprite2D6"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6671
offset_top = -90.6666
offset_right = 148.333
offset_bottom = -22.6666
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "000"

[node name="Sprite2D7" type="Sprite2D" parent="Time_Attack"]
position = Vector2(592, 608)
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("11_tldix")

[node name="mins" type="Label" parent="Time_Attack/Sprite2D7"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6667
offset_top = -16.0
offset_right = 18.3333
offset_bottom = 3.00004
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "00"

[node name="sec" type="Label" parent="Time_Attack/Sprite2D7"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6669
offset_top = -53.3332
offset_right = 95.3331
offset_bottom = 14.6668
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "00"

[node name="msec" type="Label" parent="Time_Attack/Sprite2D7"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6671
offset_top = -90.6666
offset_right = 148.333
offset_bottom = -22.6666
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "000"

[node name="Drift" type="CanvasLayer" parent="."]
visible = false

[node name="Sprite2D1" type="Sprite2D" parent="Drift"]
position = Vector2(104, 480)
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("5_l4t5f")

[node name="score" type="Label" parent="Drift/Sprite2D1"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6667
offset_top = -16.0
offset_right = 18.3333
offset_bottom = 3.00004
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "1000000"
metadata/_edit_use_anchors_ = true

[node name="Sprite2D2" type="Sprite2D" parent="Drift"]
position = Vector2(104, 544)
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("6_u66so")

[node name="score" type="Label" parent="Drift/Sprite2D2"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6667
offset_top = -16.0
offset_right = 18.3333
offset_bottom = 3.00004
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "00"

[node name="Sprite2D3" type="Sprite2D" parent="Drift"]
position = Vector2(104, 608)
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("7_fsfed")

[node name="score" type="Label" parent="Drift/Sprite2D3"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6667
offset_top = -16.0
offset_right = 18.3333
offset_bottom = 3.00004
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "00"

[node name="Sprite2D4" type="Sprite2D" parent="Drift"]
position = Vector2(104, 672)
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("8_f54gi")

[node name="score" type="Label" parent="Drift/Sprite2D4"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6667
offset_top = -16.0
offset_right = 18.3333
offset_bottom = 3.00004
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "00"

[node name="Sprite2D5" type="Sprite2D" parent="Drift"]
position = Vector2(592.001, 480)
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("9_otu8t")

[node name="score" type="Label" parent="Drift/Sprite2D5"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6667
offset_top = -16.0
offset_right = 18.3333
offset_bottom = 3.00004
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "00"

[node name="Sprite2D6" type="Sprite2D" parent="Drift"]
position = Vector2(592, 544)
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("10_fdkcs")

[node name="score" type="Label" parent="Drift/Sprite2D6"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6667
offset_top = -16.0
offset_right = 18.3333
offset_bottom = 3.00004
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "00"

[node name="Sprite2D7" type="Sprite2D" parent="Drift"]
position = Vector2(592, 608)
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("11_tldix")

[node name="score" type="Label" parent="Drift/Sprite2D7"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -10.6667
offset_top = -16.0
offset_right = 18.3333
offset_bottom = 3.00004
rotation = -1.5708
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("6_x0sx8")
theme_override_font_sizes/font_size = 60
text = "00"
